Updated commands and added invulnerability of checking alerts