@@ -20,19 +20,22 @@ import org.spongepowered.api.command.CommandResult;
 import org.spongepowered.api.command.CommandSource;
 import org.spongepowered.api.command.args.CommandContext;
 import org.spongepowered.api.command.args.GenericArguments;
+import org.spongepowered.api.service.pagination.PaginationList;
 import org.spongepowered.api.text.Text;
+import org.spongepowered.api.text.format.TextColors;
 
 
 public class GriefAlertQueryCommand extends AbstractCommand {
 
-  private static final int DEFAULT_MAXIMUM_QUERIES = 20;
-  private static final int MAXIMUM_MAXIMUM_QUERIES = 100;
+  private static final int DEFAULT_MAXIMUM_QUERIES = 1000;
 
   GriefAlertQueryCommand() {
     super(
         Permissions.GRIEFALERT_COMMAND_QUERY,
-        Text.of("Get information regarding recent cached grief alerts")
-    );
+        Text.of("Get information regarding recent cached grief alerts. Combined alerts will show ",
+            "information about only the first alert in query list. Use ",
+            Format.bonus("/griefalert info <index>"),
+            "to show information specific to given alert."));
     addAlias("query");
     addAlias("q");
     setCommandElement(GenericArguments.flags()
@@ -48,7 +51,7 @@ public class GriefAlertQueryCommand extends AbstractCommand {
         .valueFlag(
             GenericArguments.integer(Text.of("maximum")),
             "-max", "m")
-        .flag("-group")
+        .flag("-group", "g")
         .buildWith(
             GenericArguments.none()));
   }
@@ -65,11 +68,6 @@ public class GriefAlertQueryCommand extends AbstractCommand {
     Collections.reverse(cacheReversed);
 
     int max = (int) args.getOne("maximum").orElse(DEFAULT_MAXIMUM_QUERIES);
-    // ensure the result count isn't astronomical
-    if (max > MAXIMUM_MAXIMUM_QUERIES) {
-      src.sendMessage(Format.error("Search shortened to ", MAXIMUM_MAXIMUM_QUERIES, " results."));
-      max = MAXIMUM_MAXIMUM_QUERIES;
-    }
 
     final boolean group = args.hasAny("group");
 
@@ -87,10 +85,10 @@ public class GriefAlertQueryCommand extends AbstractCommand {
 
     if (matching.isEmpty()) {
       src.sendMessage(Format.info("No alerts matching those parameters"));
-    } else {
-      src.sendMessage(Format.heading("Showing last ", Format.bonus(max), " alerts:"));
+      return CommandResult.empty();
     }
-    Collections.reverse(matching);
+
+    src.sendMessage(Format.heading("Showing last ", Format.bonus(max), " alerts:"));
 
     LinkedList<LinkedList<Alert>> nested = new LinkedList<>();
     nested.add(new LinkedList<>());
@@ -106,20 +104,31 @@ public class GriefAlertQueryCommand extends AbstractCommand {
     }
 
     if (group) {
-      nested.stream()
-          .filter(list -> !list.isEmpty())
-          .forEach(list -> src.sendMessage(list.getFirst()
-          .getMessageText().concat(Format.bonus(
-              Format.space(),
-              "x",
-              list.size()))));
+      PaginationList.builder()
+          .contents(nested.stream()
+              .filter(list -> !list.isEmpty())
+              .map(list -> list.get(0).getMessageText().concat(Format.bonus(
+                  Format.space(),
+                  "x",
+                  list.size())))
+              .collect(Collectors.toList()))
+          .title(Format.bonus("Query"))
+          .padding(Text.of(TextColors.DARK_GRAY, "="))
+          .build()
+          .sendTo(src);
     } else {
-      nested.stream()
-          .filter(list -> !list.isEmpty())
-          .forEach(list -> src.sendMessage(list.getFirst().getTextWithIndices(
-          list.stream()
-              .map(Alert::getCacheIndex)
-              .collect(Collectors.toList()))));
+      PaginationList.builder()
+          .contents(nested.stream()
+              .filter(list -> !list.isEmpty())
+              .map(list -> list.getFirst().getTextWithIndices(
+                  list.stream()
+                      .map(Alert::getCacheIndex)
+                      .collect(Collectors.toList())))
+              .collect(Collectors.toList()))
+          .title(Format.bonus("Query"))
+          .padding(Text.of(TextColors.DARK_GRAY, "="))
+          .build()
+          .sendTo(src);
     }
 
     return CommandResult.success();
